--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "home": ".",
+{ 
+  "homepage": "https://Prasad-P-G.github.io/spizella",
   "name": "spizella",
   "version": "0.1.0",
   "private": true,
